zutil-inheritance/tests/failure/thread_non_send.stderr
error[E0277]: `NonNull<BaseStorage>` cannot be sent between threads safely
  --> tests/failure/thread_non_send.rs:26:16
   |
26 |       thread::spawn(move || {
   |       ------------- ^------
   |       |             |
   |  _____|_____________within this `{closure@$DIR/tests/failure/thread_non_send.rs:26:16: 26:23}`
   | |     |
   | |     required by a bound introduced by this call
27 | |         let _ = a.fields().a.borrow_mut();
28 | |     });
   | |_____^ `NonNull<BaseStorage>` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/failure/thread_non_send.rs:26:16: 26:23}`, the trait `Send` is not implemented for `NonNull<BaseStorage>`
note: required because it appears within the type `Base`
  --> src/base.rs
   |
   | pub struct Base {
   |            ^^^^
note: required because it appears within the type `A`
  --> tests/failure/thread_non_send.rs:19:9
   |
19 |     struct A() {
   |            ^
note: required because it's used within this closure
  --> tests/failure/thread_non_send.rs:26:16
   |
26 |     thread::spawn(move || {
   |                   ^^^^^^^
note: required by a bound in `spawn`
  --> $RUST/std/src/thread/functions.rs
   |
   | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
   |        ----- required by a bound in this function
...
   |     F: Send + 'static,
   |        ^^^^ required by this bound in `spawn`

error[E0277]: `NonNull<BaseVTable>` cannot be sent between threads safely
  --> tests/failure/thread_non_send.rs:26:16
   |
26 |       thread::spawn(move || {
   |       ------------- ^------
   |       |             |
   |  _____|_____________within this `{closure@$DIR/tests/failure/thread_non_send.rs:26:16: 26:23}`
   | |     |
   | |     required by a bound introduced by this call
27 | |         let _ = a.fields().a.borrow_mut();
28 | |     });
   | |_____^ `NonNull<BaseVTable>` cannot be sent between threads safely
   |
   = help: within `{closure@$DIR/tests/failure/thread_non_send.rs:26:16: 26:23}`, the trait `Send` is not implemented for `NonNull<BaseVTable>`
note: required because it appears within the type `Base`
  --> src/base.rs
   |
   | pub struct Base {
   |            ^^^^
note: required because it appears within the type `A`
  --> tests/failure/thread_non_send.rs:19:9
   |
19 |     struct A() {
   |            ^
note: required because it's used within this closure
  --> tests/failure/thread_non_send.rs:26:16
   |
26 |     thread::spawn(move || {
   |                   ^^^^^^^
note: required by a bound in `spawn`
  --> $RUST/std/src/thread/functions.rs
   |
   | pub fn spawn<F, T>(f: F) -> JoinHandle<T>
   |        ----- required by a bound in this function
...
   |     F: Send + 'static,
   |        ^^^^ required by this bound in `spawn`
